--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,17 +1,21 @@
-# Site settings
+# Site title will be used everywhere
 title: Solar Stream Tools
 description: > # this means to ignore newlines until "baseurl:"
   Online help and documentation site for Solar Stream Tools
+# Final root url of the site. No ending slash. No subdirectory
 url: https://riverscapes.github.io
+# If the site is in a subdirectory url you should do it like this: "/subdirectory". Otherwise ""
 baseurl: "/SolarStream"
+# When serving locally what port should we use:
 port: 4001
+# google_analytics: UA-XXXXXXXXXXX-X
 
 # Markdown style
 markdown: kramdown
 # Syntax highlighter.
 highlighter: rouge
 
-# Choosing "default" layout means we don't need a "layout:default" in all our
+# Choosing "default" layout means we don't need a "layout:default" in all our 
 # front matter
 defaults:
   -
@@ -26,10 +30,13 @@ exclude:
   - LICENSE
   - README.md
   - _config.yml
+  - package.json
+  - yarn.lock
+  - script
+  - js
+  - TEMPLATE
+  - Gemfile*
 
-# Where our layouts and templates are stored
-layouts_dir:  src/_layouts
-includes_dir: src/_includes
 
 # These are theme settings that will be used to turn features on and off
 # They are not part of Jekyll, they are entirely custom.
@@ -37,8 +44,38 @@ settings:
   # Turn the automatically generated page contents on and off
   autoPageContents:
     active: true
-    onHome: true
-  # Options for the sidebar menu
+    onHome: false
+  # Options for the sidebar menu      
   sideMenu:
     homeItem: true
-    startExpanded: true
+    startExpanded: false
+  # Arbitrary multi-level topbar menu
+  # IF you don't need this just comment out everything below
+  # ----------------------------------
+  topmenu:
+    - title: "Riverscapes"
+      childern:
+        - title: "Model Home"
+          url: index
+        - title: "Riverscapes Home"
+          url: http://riverscapes.xyz
+        - title: "About Riverscapes"
+          url: http://riverscapes.xyz/about.html
+        - title: "Who We Are"
+          url: http://riverscapes.xyz/who-we-are.html
+        - title: "News"
+          url: http://riverscapes.xyz/news.html
+    - title: "RC Tools"
+      url: http://riverscapes.xyz/rc-tools.html
+    - title: "RC Science"
+      url: http://riverscapes.xyz/rc-science.html
+    - title: "RC Data"
+      url: http://riverscapes.xyz/rc-data.html
+    - title: "RC Help"
+      url: http://riverscapes.xyz/rc-help.html
+
+# Here is how we retrieve the remote theme. Changes to this remote theme will show up after you 
+# push the repo with your /docs folder
+remote_theme: Riverscapes/riverscapes-jekyll-theme
+plugins:
+  - jekyll-remote-theme
